Version 2.02.49 - 
================================
  Refactor vgsplit and vgextend to remove READ_REQUIRE_RESIZEABLE flag.
  Changed exit() to _exit() after fork(); avoid flushing libc buffers twice.
  Fixed invalid type being passed as printf argument on Sparc64.
  Make cmd->cmd_line const.
  Fix dev name mismatch in vgcreate man page example.
  Refactor vg_remove_single for use in liblvm.
  Make all tools consistent with lock ordering - obtain VG_ORPHAN lock second.
  Check MD devices for a partition table during device scan.
  Add extended device (blkext) and MD partition (mdp) types to filters.
  Fix and precise metadata read errors for segment areas.
  Fix segment metadata read function errors to use proper segment name.
  Add parent node to config_node structure.
  Fix segment import functions to print segment name and logical volume name.
  Update vgsplit and vgcreate to call the new vg_create, then call 'set' fns.
  Change vg_create to take minimal parameters, obtain a lock, and return vg_t.
  Refactor vgchange extent_size, max_lv, max_pv, and alloc_policy for liblvm.
  Update t-vgcreate-usage.sh to test for default vg properties.
  Fix memory leak in vgsplit when re-reading the vg.
  Make exit/cleanup code more robust when some lvm init function fails.
  Use implicit set of LCK_NONBLOCK instead of explicit vg_read() flag.
  Remove unnecessary locking and existence code from new vg_read() interface.
  Permit several segment types to be registered by a single shared object.
  Update the man pages to document size units uniformly.
  Allow commandline sizes to be specified in terms of bytes and sectors.
  Update 'md_chunk_alignment' to use stripe-width to align PV data area.
  Update test/t-inconsistent-metadata.sh to match new vg_read interface.
  Add lvmcache_init() to polldaemon initialization.
  Convert tools to use new vg_read / vg_read_for_update.
  Fix segfault in vg_release when vg->cmd is NULL.

Version 2.02.48 - 30th June 2009